[gd_scene load_steps=6 format=2]

[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://framework/ui/modules/menu_button/audio/select_02.wav" type="AudioStream" id=2]
[ext_resource path="res://framework/ui/modules/menu_button/audio/select_01.wav" type="AudioStream" id=3]
[ext_resource path="res://framework/ui/modules/menu_button/audio/hover_01.wav" type="AudioStream" id=4]
[ext_resource path="res://framework/ui/modules/menu_button/menu_button.gd" type="Script" id=5]

[node name="MenuButton" type="Button"]
text = "TEST"
script = ExtResource( 5 )

[node name="PressedSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PressedSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 3 )
volume_db = -24.0
bus = "Menu"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="PressedSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 2 )
volume_db = -24.0
bus = "Menu"

[node name="HoverSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="HoverSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 4 )
volume_db = -24.0
bus = "Menu"

[connection signal="focus_entered" from="." to="." method="_on_MenuButton_focus_entered"]

[editable path="PressedSound"]
[editable path="PressedSound/RandomAudioPlayer"]
[editable path="HoverSound"]
[editable path="HoverSound/RandomAudioPlayer"]
